<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        tools:context="com.example.android.quizapp.MainActivity">

        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <ImageView
            style="@style/myStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageDescription"
            android:src="@drawable/bucharest" />

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1a"
                style="@style/myButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1a" />

            <RadioButton
                android:id="@+id/answer1b"
                style="@style/myButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1b" />

            <RadioButton
                android:id="@+id/answer1c"
                style="@style/myButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1c" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer2a"
                style="@style/myButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2a" />

            <RadioButton
                android:id="@+id/answer2b"
                style="@style/myButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2b" />

            <RadioButton
                android:id="@+id/answer2c"
                style="@style/myButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2c" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">

            <RadioButton
                style="@style/myButtons"
                android:id="@+id/answer3a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer3a" />

            <RadioButton
                style="@style/myButtons"
                android:id="@+id/answer3b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer3b" />

            <RadioButton
                style="@style/myButtons"
                android:id="@+id/answer3c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer3c" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4" />

        <CheckBox
            android:id="@+id/answer4a"
            style="@style/myButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer4a" />

        <CheckBox
            android:id="@+id/answer4b"
            style="@style/myButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer4b" />

        <CheckBox
            android:id="@+id/answer4c"
            style="@style/myButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer4c" />

        <CheckBox
            android:id="@+id/answer4d"
            style="@style/myButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer4d" />

        <CheckBox
            android:id="@+id/answer4e"
            style="@style/myButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/answer4e" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/finish"
            android:textColor="@color/background"
            android:onClick="endQuiz"/>

    </LinearLayout>
</ScrollView>